--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.8.4",
     "fjsv2": "file:",
     "next": "15.3.0",
     "react": "^19.0.0",
